# skale-contracts

./: .gitignore  .yarnrc.yml  README.md  cspell.json  metadata.json  package.json
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish.yml  test.yml
holesky/holesky-ima/: legacy.json
python/: .coveragerc  .gitignore  README.md  pytest.ini  setup.cfg
python/scripts/: build_package.sh  calculate_version.sh  full_check.sh  generate_package_version.py  publish_package.sh
python/src/: constants.py  instance.py  metadata.py  network.py  project.py
python/src/projects/skale_manager/: skale_manager_instance.py  skale_manager_project.py
python/src/skale_contracts/: __init__.py  abi.py  constants.py  instance.py  metadata.py  network.py  project.py  project_factory.py  project_metadata.py  skale_contracts.py  types.py
python/src/skale_contracts/projects/: __init__.py  config_controller.py  context.py  erc1820.py  erc1820_predeployed.py  etherbase.py  filestorage.py  ima.py  marionette.py  mirage_manager.py  paymaster.py  playa_manager.py  predeployed.py  project_factory.py  skale_allocator.py  skale_manager.py
python/src/skale_contracts/projects/skale_manager/: skale_manager_instance.py  skale_manager_project.py
python/test/: requirements.txt
python/tests/: conftest.py  constants.py  mainnet_ima_test.py  marionette_test.py  paymaster_test.py  requirements.txt  skale_allocator_test.py  skale_manager_test.py  unit_test.py  utils.py
typescript/: .eslintrc.cjs  .gitignore  .yarnrc.yml  cspell.json  package.json  tsconfig.json
(+107 files in other folders)
