[metadata]
name = skale-contracts
version = file: version.txt
author = Dmytro Stebaiev
author_email = dmytro@skalelabs.com
description = A tool for access to SKALE smart contracts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skalenetwork/skale-contracts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    parver
    semver
    web3 >= 6, < 8

[options.packages.find]
where = src
